refactor: make mvn -pl ui jpackage:jpackage work on macOS arm chip